<resources>
    <string name="app_name">IntellIJAssistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shortcut_description_label">Enter shortcut description</string>
    <string name="shortcut_title_label">Add a New Shortcut</string>
    <string name="shortcut_title_hint">Enter shortcut here</string>
    <string name="shortcut_description_hint">Enter description here</string>
    <string name="shortcut_favourite_label">Favourite</string>
    <string name="add_shortcut_text">Add</string>
    <string name="shortcut_details">Shortcut Details</string>
    <string name="list_item_shortcut_title">Shortcut Title</string>
    <string name="list_item_shortcut_description">Shortcut Description</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_shortcut">New Shortcut</string>

    <string-array name="categories">
        <item>Editing</item>
        <item>Search</item>
        <item>Usage/Search</item>
        <item>Compile/Run</item>
        <item>Debugging</item>
        <item>Navigation</item>
        <item>Refactoring</item>
        <item>Version Control</item>
        <item>Live Templates</item>
        <item>General</item>
        <item>Other</item>
    </string-array>

</resources>
