<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/shortcut_title_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shortcut_title"
        android:hint="@string/shortcut_title_hint"/>

    <TextView
        android:paddingTop="10dp"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortcut_description_label" />

    <EditText
        android:id="@+id/shortcut_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shortcut_description_hint"
        android:paddingBottom="10dp"/>

    <CheckBox
        android:id="@+id/shortcut_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortcut_favourite_label" />

</LinearLayout>